# kikipounamu

./: .dockerignore  .env.example  .gitignore  ASR_server.code-workspace  CHANGELOG.md  CHANGELOG.zh-CN.md  FULL_SYSTEM_STARTUP_GUIDE.zh-CN.md  LICENSE  README.md  README.zh-CN.md  cleanup_admin.ps1  docker-compose.yml
ASR_server/: .env.example  .gitignore  FULL_SYSTEM_STARTUP_GUIDE.md  FULL_SYSTEM_STARTUP_GUIDE.zh-CN.md  README.md  README.zh-CN.md  STARTUP_GUIDE.md  STARTUP_GUIDE.zh-CN.md  debug_rq_json.py  dump.rdb  pyproject.toml
ASR_server/reports/: 2025-12-11_load_test_concurrency.md  2025-12-11_load_test_concurrency.zh-CN.md  2025-12-12_worker_queue_mismatch_retrospective.md  2025-12-12_worker_queue_mismatch_retrospective.zh-CN.md  ARCHITECTURE_DESIGN.md  ARCHITECTURE_DESIGN.zh-CN.md  LOCAL_DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_GUIDE.zh-CN.md  torch_version_investigation.md  torch_version_investigation.zh-CN.md  uvlock_issue.md  uvlock_issue.zh-CN.md
ASR_server/reports/architecture_discussions/: 2025-12-14_monitoring_concepts_learning.zh-CN.md  2025-12-14_monitoring_implementation_plan.zh-CN.md
ASR_server/scripts/: clear_old_files.py  download_models.py  enable_local_aof.sh  manual_test_example.py  monitor_resources.py  performance_test.py  recover_chat_history.py  run_load_test.sh  run_tests.sh  start_api_server.ps1  start_api_server.sh  start_stream_worker.sh  start_unified_worker.ps1  start_unified_worker.sh  start_workers.sh  test_long_audio.py
ASR_server/src/: __init__.py  hotwords.txt
ASR_server/src/api/: __init__.py  (+5 more)
ASR_server/tests/: conftest.py
(+296 files in other folders)
