[project]
name = "asr-server"
version = "1.1.0"
requires-python = "==3.10.*"
dependencies = [
    # Linux 用 Stable CUDA 12.8
    "torch>=2.7.0 ; sys_platform == 'linux'",
    "torch>=2.7.0 ; sys_platform != 'linux'",
    
    "torchvision>=0.22.0 ; sys_platform == 'linux'",
    "torchvision>=0.22.0 ; sys_platform != 'linux'",
    
    "torchaudio>=2.7.0 ; sys_platform == 'linux'",
    "torchaudio>=2.7.0 ; sys_platform != 'linux'",
    
    "funasr",
    "modelscope",
    
    # Web Framework & Task Queue
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]